--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.16.3",
-    "less": "^4.2.0"
+    "@astrojs/sitemap": "^3.2.1",
+    "astro": "^4.16.15",
+    "less": "^4.2.1"
   }
 }
