--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "astro-kit-less",
+  "name": "beginner-astro-v5-less",
   "type": "module",
-  "version": "0.0.1",
+  "version": "2.0.0",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@astrojs/sitemap": "^3.2.1",
-    "astro": "^4.16.15",
+    "astro": "^5.1.3",
     "less": "^4.2.1"
   }
 }
